// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AbsDir > .decodeSync > fn("/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsDir > .decodeSync > fn("/a/b/c/d/e/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/a/b/c/d/e/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "a",
      "b",
      "c",
      "d",
      "e"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsDir > .decodeSync > fn("/home") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/home"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsDir > .decodeSync > fn("/home/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/home/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsDir > .decodeSync > fn("/my documents/projects/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/my documents/projects/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "my documents",
      "projects"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsDir > .decodeSync > fn("/usr/local/bin/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/usr/local/bin/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "usr",
      "local",
      "bin"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/.config.json") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/.config.json"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": ".config",
    "extension": ".json",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/a/b/c/d/e.js") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/a/b/c/d/e.js"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "a",
      "b",
      "c",
      "d"
    ],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "e",
    "extension": ".js",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/archive.tar.gz") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/archive.tar.gz"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "archive.tar",
    "extension": ".gz",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/file.txt") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/file.txt"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/home/user/doc.pdf") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/home/user/doc.pdf"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "home",
      "user"
    ],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "doc",
    "extension": ".pdf",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`AbsFile > .decodeSync > fn("/my docs/file name.txt") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"/my docs/file name.txt"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "my docs"
    ],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "file name",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("../") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"../"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      ".."
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("../../lib/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"../../lib/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "..",
      "..",
      "lib"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("../src/lib/utils/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"../src/lib/utils/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "..",
      "src",
      "lib",
      "utils"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("./") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"./"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("./src/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"./src/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("src") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"src"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("src/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"src/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelDir > .decodeSync > fn("src/components/") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"src/components/"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src",
      "components"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("../../lib/util.js") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"../../lib/util.js"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "..",
      "..",
      "lib"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "util",
    "extension": ".js",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("../file.txt") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"../file.txt"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      ".."
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("./file.txt") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"./file.txt"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("./src/components/App.tsx") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"./src/components/App.tsx"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src",
      "components"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "App",
    "extension": ".tsx",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("file.txt") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"file.txt"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`RelFile > .decodeSync > fn("src/index.ts") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"src/index.ts"
╠══════════════════════════════════════════════════╣ THEN RETURNS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "index",
    "extension": ".ts",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;
